<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="distancy">Distância</string>
    <string name="total_kms">Total de quilometros</string>
    <string name="price">Preço</string>
    <string name="price_by_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_by_liter">KMs por litro</string>
    <string name="total_expense">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="validate_fill_all_fields">Preencha corretamente os campos.</string>
</resources>